Agrega Dependencias de FirebaseAuth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ProyectoFinalAplicada2</string>
     <string name="placeholder_search">Search</string>
+    <string name="web_client_id">138527275305-glcjm6vrapkqeqc83fpd1qdvdmjv6lb6.apps.googleusercontent.com</string>
 </resources>
